@@ -71,6 +71,10 @@
         <version>1.6.0</version>
         <configuration>
           <mainClass>${mainClass}</mainClass>
+          <arguments>
+            <argument>--add-opens=milktea.cim.base/milktea.cim.framework.command.CommandBus=ALL-UNNAMED</argument>
+            <argument>--add-opens=milktea.cim.base/milktea.cim.framework.command.CommandDescriptor=ALL-UNNAMED</argument>
+          </arguments>
         </configuration>
         <executions>
           <execution>
@@ -114,6 +118,12 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.11.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
